removed all grey borders, tried to fix footer collapsing.. According to latest review

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -236,7 +236,6 @@ input.navbar-search:focus {
   display: flex;
 }
 
-.footer-main > p > a,
 ul.piped.right > li > a {
   border-right: 1px solid gray;
 }
@@ -248,10 +247,6 @@ ul.piped.right > li > a {
 
 .navbar-li:hover {
   background: #595959;
-}
-
-.piped.right > li {
-  padding-right: 10px;
 }
 
 .left {
